[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytdownloader"
version = "0.1.0"
description = "Command-line tool for downloading YouTube videos and basic video editing"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "YTDownloader Team", email = "example@example.com"}
]
keywords = ["youtube", "video", "download", "editing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yt-dlp>=2023.12.30",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.scripts]
ytdownloader = "ytdownloader.cli:main"

[project.urls]
Homepage = "https://github.com/vjackl001/ytdownloader"
Repository = "https://github.com/vjackl001/ytdownloader.git"
Issues = "https://github.com/vjackl001/ytdownloader/issues"

[tool.hatch.build.targets.wheel]
packages = ["ytdownloader"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]